set up container class to prevent site from becoming too wide

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,11 @@ html {
     box-sizing: inherit;
 }
 
+.site-container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -225,8 +230,6 @@ nav .current_page_item a {
 
 /* Sidebar */
 #sidebar {
-    width: 270px;
-    margin: 0px;
     padding: 30px 0px 0px 0px;
 }
 
